affinity, storage and repository data now now save to config.json

--- a/frontend/src/locales/en/podDeployment.json
+++ b/frontend/src/locales/en/podDeployment.json
@@ -366,7 +366,9 @@
       "reclaimPolicy": "Reclaim Policy",
       "volumeBindingMode": "Volume Binding Mode",
       "nodeHostname": "Node Hostname",
-      "preview": "Configuration Preview"
+      "preview": "Configuration Preview",
+      "storageClassConfiguration": "Storage Class Configuration",
+      "persistentVolumes": "Persistent Volumes"
     },
     "configMap": {
       "title": "ConfigMap Configuration",
