--- a/frontend/src/locales/zh-TW/common.json
+++ b/frontend/src/locales/zh-TW/common.json
@@ -20,7 +20,8 @@
     "lastUpdate": "最後更新",
     "next": "下一步",
     "back": "返回",
-    "deploy": "部署"
+    "deploy": "部署",
+    "create": "創建"
   },
   "errors": {
     "generalError": "發生錯誤",
